# XCastDemo

./: README.md  meeting_flow.md
vipkid-demo/: xcast.hh
vipkid-demo/doc/: usages.docx
vipkid-demo/example/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Resource.h  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  generate_vs_proj.bat  imsdk_config  log.txt  main-view.cpp  main-view.h  tree-view.cpp  xcast-dev.aps  xcast-dev.cpp  xcast-dev.rc  xcast-dev.sln  xcast-ui-handler.cc  xcast-ui-handler.h  xcast_dev.vcxproj  xcast_dev.vcxproj.filters
vipkid-demo/include/: xcast_error.h
vipkid-demo/libs/: 1400036169.conf  xcast.lib
xcast-demo/: xcast.h  xcast.hh
xcast-demo/example/: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Resource.h  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  generate_vs_proj.bat  log.txt  log11.txt  main-view.cpp  main-view.h  settings.txt  stdafx.cpp  stdafx.h  tab-view.cpp  tree-view.cpp  xcast-dev.aps  xcast-dev.cpp  xcast-dev.h  xcast-dev.rc  xcast-dev.sln  xcast-ui-handler.cc  xcast-ui-handler.h  xcast_dev.vcxproj  xcast_dev.vcxproj.filters
xcast-demo/example/Live/: XCastData.cpp  XCastData.h  XCastHelper.cpp  XCastHelper.h  XCastObserver.cpp  XCastObserver.h  XCastUtil.cpp  XCastUtil.h
xcast-demo/example/Win32/Debug/ALL_BUILD/: ALL_BUILD.vcxprojResolveAssemblyReference.cache
xcast-demo/example/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
xcast-demo/example/xcast_dev.dir/Debug/: xcast-dev.res
xcast-demo/example/xcast_dev.dir/Debug/xcast_dev.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  xcast_dev.lastbuildstate
xcast-demo/include/: xcast_base.h  xcast_const.h  xcast_data.h  xcast_define.h  xcast_error.h  xcast_variant.h
xcast-demo/libs/: 1400036169.conf  settings.txt  xcast.lib
(+60 files in other folders)
